fixing problem with right aligning hebrew.
git-svn-id: https://source.caret.cam.ac.uk/svn/projects/ul-foundations/foundationsviewer/trunk@12446 59899196-baf2-4bc4-a94d-4a08719e171f

--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -202,7 +202,7 @@ ol#index_carousel li {
 	width: 250px;
 }
 
-.arabic {
+.right-aligned-language {
 	font-style: normal;
 	margin-left: auto;
 	margin-right: 0px;
